--- a/css/style.scss
+++ b/css/style.scss
@@ -1,233 +1,7 @@
-// font-family: 'Kaushan Script', cursive;
-// font-family: 'Montserrat', sans-serif;
-// font-family: 'Roboto', sans-serif;
-
-// Sass Variables
-$accent-color: #f38181;
-$color-white: #ffffff;
-$color-green: #95e1d3;
-$color-yellow: #fce38a;
-$font-primary: #333333;
-$font-secondary: #999999;
-$border-color: #e5e5e5;
-$bg-light: #f8f8f8;
-
-//Sass Mixins
-@mixin mobile {
-  @media (min-width: 576px) {
-    @content;
-  }
-}
-
-@mixin tablet {
-  @media (min-width: 768px) {
-    @content;
-  }
-}
-
-@mixin desktop {
-  @media (min-width: 992px) {
-    @content;
-  }
-}
-
-@mixin large-screen {
-  @media (min-width: 1200px) {
-    @content;
-  }
-}
-
-@mixin custom-media {
-  @media (max-width: 768px) {
-    @content;
-  }
-}
-
-@mixin gradient-def {
-  background: linear-gradient(to bottom, #f38181, #fce38a);
-}
-
-//Keyframes declaration
-@keyframes showcase-hover {
-  0% {
-    transform: translateY(400%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-//General Styling
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: "Montserrat", sans-serif;
-  color: $font-primary !important;
-}
-
-p,
-a,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-ul,
-li {
-  margin: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: $font-primary !important;
-}
-
-.sec-title {
-  p {
-    font-size: 24px;
-    font-family: "Kaushan Script", cursive;
-    margin-bottom: 15px;
-  }
-  h1 {
-    font-size: 28px;
-    font-weight: 800;
-    text-transform: uppercase;
-    position: relative;
-  }
-  h1::after {
-    content: "";
-    width: 60px;
-    height: 3px;
-    background-color: $accent-color;
-    position: absolute;
-    bottom: -45px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-}
-
-.sec-padding {
-  padding-top: 90px;
-  padding-bottom: 110px;
-}
-.sec-inr-padding {
-  padding-top: 90px;
-
-  .sec-inr-txt {
-    padding-bottom: 90px;
-    p {
-      font-size: 14px;
-      line-height: 24px;
-      color: $font-secondary;
-    }
-  }
-}
-
-.divider {
-  height: 1px;
-  background-color: $border-color;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-// Navbar customize
-header {
-  transition: 0.8s ease;
-  transition-property: height, background-color;
-  height: 80px;
-}
-
-.header-scrolled {
-  background-color: $accent-color;
-  height: 60px;
-  box-shadow: 0px 0px 27px -14px rgba(0, 0, 0, 0.75);
-  z-index: 999999999;
-  .nav-link::after {
-    bottom: 0 !important;
-  }
-  .active::after {
-    bottom: 0;
-  }
-}
-.navbar {
-  a {
-    color: $color-white;
-    transition: all 0.4s ease;
-  }
-}
-.navbar-brand {
-  font-weight: 700;
-  font-size: 26px;
-  opacity: 0.8;
-  color: $color-white !important;
-}
-
-.navbar .navbar-nav {
-  .nav-link {
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 400;
-    opacity: 0.8;
-    position: relative;
-  }
-
-  .nav-link:hover {
-    color: $color-yellow;
-  }
-
-  .nav-link::after {
-    position: absolute;
-    bottom: -5px;
-    left: 50%;
-    content: "";
-    width: 80%;
-    height: 3px;
-    transform: translateX(-50%) scaleX(0);
-    background-color: $color-yellow;
-    transition: all 0.4s ease;
-  }
-
-  .nav-link:hover::after {
-    transform: translateX(-50%) scaleX(1);
-  }
-
-  .active {
-    color: $color-yellow;
-  }
-  .active::after {
-    transform: translateX(-50%) scaleX(1);
-  }
-
-  li {
-    margin-right: 32px;
-  }
-  li:last-child {
-    margin-right: 0;
-  }
-}
-.navbar .navbar-nav .nav-icons {
-  a {
-    margin-left: 15px;
-  }
-  a:first-child {
-    margin-left: 0;
-  }
-}
+@import "sass-modules/mixins";
+@import "sass-modules/vars";
+@import "sass-modules/general";
+@import "sass-modules/navigation";
 
 // Banner section customize
 .bnr {
@@ -235,8 +9,6 @@ header {
   background-image: url(../images/banner.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
-  overflow: hidden;
   position: relative;
 }
 
@@ -252,7 +24,7 @@ header {
 }
 
 .bnr .slick-track,
-.slick-list {
+.bnr .slick-list {
   height: 100%;
   display: flex;
   justify-content: center;
@@ -260,8 +32,16 @@ header {
 }
 
 .intro-cnt-wrap {
-  height: 100vh;
+  height: 350px;
   color: $color-white;
+
+  @include md {
+    height: 450px;
+  }
+
+  @include lg {
+    height: 100vh;
+  }
 }
 
 .intro-txt-wrap {
@@ -270,19 +50,43 @@ header {
   opacity: 0.8;
 
   p {
-    font-size: 52px;
-    line-height: 52px;
+    font-size: 24px;
+    line-height: 28px;
     font-family: "Kaushan Script", cursive;
+
+    @include md {
+      font-size: 28px;
+      line-height: 28px;
+    }
+
+    @include lg {
+      font-size: 52px;
+      line-height: 52px;
+    }
   }
   h1 {
     color: $color-white !important;
-    font-size: 100px;
+    font-size: 32px;
     font-weight: 700;
-    line-height: 100px;
+    line-height: 32px;
     text-transform: uppercase;
-    margin-top: 25px;
-    margin-bottom: 100px;
+    margin-top: 15px;
+    margin-bottom: 40px;
     position: relative;
+
+    @include md {
+      font-size: 50px;
+      line-height: 60px;
+      margin-top: 10px;
+      margin-bottom: 50px;
+    }
+
+    @include lg {
+      font-size: 80px;
+      line-height: 100px;
+      margin-top: 25px;
+      margin-bottom: 100px;
+    }
   }
 
   h1:after {
@@ -291,22 +95,33 @@ header {
     width: 60px;
     height: 3px;
     background-color: $color-white;
-    bottom: -50px;
+    bottom: -20px;
     left: 50%;
     transform: translateX(-50%);
+
+    @include lg {
+      bottom: -50px;
+    }
   }
   .btn {
-    width: 160px;
-    height: 40px;
+    width: 120px;
+    height: 30px;
     border: 2px solid $color-white;
     border-radius: 0;
     color: $color-white;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 12px;
     padding: 0;
-    line-height: 36px;
+    line-height: 28px;
     font-weight: 600;
     transition: all 0.5s ease;
+
+    @include lg {
+      width: 160px;
+      height: 40px;
+      line-height: 36px;
+      font-size: 14px;
+    }
   }
 
   .btn:hover {
@@ -352,15 +167,38 @@ header {
 }
 
 .bnr-slide-indic p {
-  font-size: 18px;
+  font-size: 10px;
   color: $color-white;
   font-weight: 400;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 15px;
   opacity: 0.5;
+  text-align: center;
+
+  @include md {
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    text-align: left;
+  }
+
+  @include lg {
+    font-size: 18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: left;
+  }
+
   span {
     font-weight: 700;
-    font-size: 24px;
+    font-size: 12px;
+
+    @include md {
+      font-size: 18px;
+    }
+    @include lg {
+      font-size: 24px;
+    }
   }
 }
 
@@ -406,10 +244,19 @@ header {
       li {
         color: $color-white !important;
         text-decoration: none !important;
-        font-size: 18px;
+        font-size: 14px;
         font-weight: 700;
+
+        @include lg {
+          font-size: 18px;
+        }
+
         i {
-          font-size: 24px;
+          font-size: 20px;
+
+          @include lg {
+            font-size: 24px;
+          }
         }
       }
     }
@@ -476,25 +323,54 @@ header {
 .cnter-sec {
   background-color: $color-green;
   color: $color-white;
+
   ul {
     list-style-type: none;
-    width: 20%;
-    padding-top: 50px;
-    padding-bottom: 60px;
-    border-left: 1px solid
-      rgba(red($color-white), green($color-white), blue($color-white), 0.3);
+    width: 50%;
+    padding-top: 30px;
+    padding-bottom: 0px;
+    border: none;
+
+    @include md {
+      width: 20%;
+      border-left: 1px solid
+        rgba(red($color-white), green($color-white), blue($color-white), 0.3);
+      padding-top: 30px;
+      padding-bottom: 40px;
+    }
+
+    @include lg {
+      width: 20%;
+      border-left: 1px solid
+        rgba(red($color-white), green($color-white), blue($color-white), 0.3);
+      padding-top: 50px;
+      padding-bottom: 60px;
+    }
     .cnter-num {
-      font-size: 72px;
+      font-size: 48px;
       font-weight: 700;
+
+      @include lg {
+        font-size: 72px;
+      }
     }
 
     .cnter-title {
-      font-size: 14px;
+      font-size: 10px;
+      @include lg {
+        font-size: 14px;
+      }
     }
   }
   ul:last-child {
-    border-right: 1px solid
-      rgba(red($color-white), green($color-white), blue($color-white), 0.3);
+    border-right: none;
+    padding-bottom: 30px;
+
+    @include lg {
+      border-right: 1px solid
+        rgba(red($color-white), green($color-white), blue($color-white), 0.3);
+      padding-bottom: 60px;
+    }
   }
 }
 
@@ -538,6 +414,7 @@ header {
   background-repeat: no-repeat;
   position: relative;
   height: 800px;
+  overflow: visible;
 
   .sec-title {
     z-index: 1;
@@ -569,7 +446,7 @@ header {
     position: absolute;
     bottom: 6.5%;
     left: 70%;
-    z-index: 9999999;
+    z-index: 999;
   }
 }
 
@@ -924,7 +801,7 @@ header {
 
   .sec-title,
   .wps-cnt {
-    z-index: 99999;
+    z-index: 99;
   }
 }
 
