--- a/css/style.css
+++ b/css/style.css
@@ -792,14 +792,20 @@ header {
 .cnter-sec {
   background-color: #95e1d3;
   color: #ffffff;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+@media (min-width: 768px) {
+  .cnter-sec {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 .cnter-sec ul {
   list-style-type: none;
-  width: 50%;
-  padding-top: 30px;
   padding-bottom: 0px;
-  border: none;
 }
 
 @media (min-width: 768px) {
@@ -814,7 +820,6 @@ header {
 @media (min-width: 992px) {
   .cnter-sec ul {
     width: 20%;
-    border-left: 1px solid rgba(255, 255, 255, 0.3);
     padding-top: 50px;
     padding-bottom: 60px;
   }
@@ -833,6 +838,13 @@ header {
 
 .cnter-sec ul .cnter-title {
   font-size: 10px;
+  margin-left: 15px;
+}
+
+@media (min-width: 768px) {
+  .cnter-sec ul .cnter-title {
+    margin-left: 0;
+  }
 }
 
 @media (min-width: 992px) {
@@ -843,12 +855,17 @@ header {
 
 .cnter-sec ul:last-child {
   border-right: none;
-  padding-bottom: 30px;
+}
+
+@media (min-width: 768px) {
+  .cnter-sec ul:last-child {
+    padding-bottom: 40px;
+    border-right: 1px solid rgba(255, 255, 255, 0.3);
+  }
 }
 
 @media (min-width: 992px) {
   .cnter-sec ul:last-child {
-    border-right: 1px solid rgba(255, 255, 255, 0.3);
     padding-bottom: 60px;
   }
 }
