--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,7 @@ header {
 
 .bnr {
   width: 100%;
-  background-image: url(../images/banner.jpg);
+  background-image: url(../images/banner2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -486,6 +486,15 @@ header {
   .intro-txt-wrap h1 {
     font-size: 80px;
     line-height: 100px;
+    margin-top: 25px;
+    margin-bottom: 100px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .intro-txt-wrap h1 {
+    font-size: 100px;
+    line-height: 120px;
     margin-top: 25px;
     margin-bottom: 100px;
   }
@@ -806,11 +815,20 @@ header {
 .cnter-sec ul {
   list-style-type: none;
   padding-bottom: 0px;
+  width: 48%;
+  border: 1px solid #e5e5e5;
+  margin-bottom: 5px;
+  margin-left: 5px;
 }
 
 @media (min-width: 768px) {
   .cnter-sec ul {
     width: 20%;
+    border-right: none;
+    border-top: none;
+    border-bottom: none;
+    margin-left: 0;
+    margin-bottom: 0;
     border-left: 1px solid rgba(255, 255, 255, 0.3);
     padding-top: 30px;
     padding-bottom: 40px;
@@ -827,24 +845,20 @@ header {
 
 .cnter-sec ul .cnter-num {
   font-size: 48px;
+  line-height: 48px;
   font-weight: 700;
 }
 
 @media (min-width: 992px) {
   .cnter-sec ul .cnter-num {
     font-size: 72px;
+    line-height: 110px;
   }
 }
 
 .cnter-sec ul .cnter-title {
   font-size: 10px;
-  margin-left: 15px;
-}
-
-@media (min-width: 768px) {
-  .cnter-sec ul .cnter-title {
-    margin-left: 0;
-  }
+  margin-left: 0;
 }
 
 @media (min-width: 992px) {
@@ -854,13 +868,12 @@ header {
 }
 
 .cnter-sec ul:last-child {
-  border-right: none;
+  border-right: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 @media (min-width: 768px) {
   .cnter-sec ul:last-child {
     padding-bottom: 40px;
-    border-right: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
 
@@ -882,10 +895,6 @@ header {
 .srvc-singl .srvc-sin-icn i {
   color: #95e1d3;
   font-size: 30px;
-}
-
-.srvc-singl .srvc-sin-txt {
-  padding-left: 25px;
 }
 
 .srvc-singl .srvc-sin-txt h6 {
