--- a/css/style.scss
+++ b/css/style.scss
@@ -6,7 +6,7 @@
 // Banner section customize
 .bnr {
   width: 100%;
-  background-image: url(../images/banner.jpg);
+  background-image: url(../images/banner2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -84,6 +84,12 @@
     @include lg {
       font-size: 80px;
       line-height: 100px;
+      margin-top: 25px;
+      margin-bottom: 100px;
+    }
+    @include xl {
+      font-size: 100px;
+      line-height: 120px;
       margin-top: 25px;
       margin-bottom: 100px;
     }
@@ -333,9 +339,18 @@
   ul {
     list-style-type: none;
     padding-bottom: 0px;
+    width: 48%;
+    border: 1px solid $border-color;
+    margin-bottom: 5px;
+    margin-left: 5px;
 
     @include md {
       width: 20%;
+      border-right: none;
+      border-top: none;
+      border-bottom: none;
+      margin-left: 0;
+      margin-bottom: 0;
       border-left: 1px solid
         rgba(red($color-white), green($color-white), blue($color-white), 0.3);
       padding-top: 30px;
@@ -349,31 +364,30 @@
     }
     .cnter-num {
       font-size: 48px;
+      line-height: 48px;
       font-weight: 700;
 
       @include lg {
         font-size: 72px;
+        line-height: 110px;
       }
     }
 
     .cnter-title {
       font-size: 10px;
-      margin-left: 15px;
-      @include md {
-        margin-left: 0;
-      }
+      margin-left: 0;
+
       @include lg {
         font-size: 14px;
       }
     }
   }
   ul:last-child {
-    border-right: none;
+    border-right: 1px solid
+      rgba(red($color-white), green($color-white), blue($color-white), 0.3);
 
     @include md {
       padding-bottom: 40px;
-      border-right: 1px solid
-        rgba(red($color-white), green($color-white), blue($color-white), 0.3);
     }
     @include lg {
       padding-bottom: 60px;
@@ -394,8 +408,6 @@
   }
 
   .srvc-sin-txt {
-    padding-left: 25px;
-
     h6 {
       color: $font-primary;
       text-transform: uppercase;
