--- a/css/style.css
+++ b/css/style.css
@@ -1269,6 +1269,22 @@ header {
   transition: all 0.5s ease;
 }
 
+@media (min-width: 768px) {
+  .team-social li {
+    width: 30px;
+    height: 30px;
+    font-size: 16px !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .team-social li {
+    width: 45px;
+    height: 45px;
+    font-size: 22px !important;
+  }
+}
+
 .team-social li:first-child {
   border-left: none;
 }
@@ -1299,7 +1315,9 @@ header {
   padding-bottom: 0;
 }
 
-.showcase-sec .showcase-itm-wrp .col-3 {
+.showcase-sec .showcase-itm-wrp .col-3,
+.showcase-sec .showcase-itm-wrp .col-6,
+.showcase-sec .showcase-itm-wrp .col-12 {
   padding: 0;
 }
 
@@ -1309,6 +1327,8 @@ header {
 }
 
 .showcase-img img {
+  width: 100%;
+  height: auto;
   -webkit-transition: all 0.8s ease;
   transition: all 0.8s ease;
 }
@@ -1372,21 +1392,38 @@ header {
 }
 
 .showcase-img-title i {
-  font-size: 32px;
+  font-size: 26px;
+}
+
+@media (min-width: 992px) {
+  .showcase-img-title i {
+    font-size: 32px;
+  }
 }
 
 .showcase-img-title h6 {
   color: #ffffff !important;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 12px;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+}
+
+@media (min-width: 992px) {
+  .showcase-img-title h6 {
+    font-size: 14px;
+  }
 }
 
 .showcase-img-title p {
-  font-size: 14px;
-  font-style: italic;
+  font-size: 10px;
+}
+
+@media (min-width: 992px) {
+  .showcase-img-title p {
+    font-size: 14px;
+  }
 }
 
 .wps-sec {
@@ -1413,7 +1450,13 @@ header {
 }
 
 .wps-singl-wrp {
-  margin-bottom: 70px;
+  margin-bottom: 25px;
+}
+
+@media (min-width: 768px) {
+  .wps-singl-wrp {
+    margin-bottom: 70px;
+  }
 }
 
 .wps-singl-wrp .wps-sin-txt {
@@ -1470,6 +1513,18 @@ header {
   left: -10px;
 }
 
+@media (min-width: 768px) {
+  .blog-singl-img .date {
+    padding: 5px;
+  }
+}
+
+@media (min-width: 992px) {
+  .blog-singl-img .date {
+    padding: 8px;
+  }
+}
+
 .blog-singl-img .date li:nth-child(1) {
   font-size: 28px;
   line-height: 32px;
@@ -1478,12 +1533,40 @@ header {
   font-family: "Roboto", sans-serif;
 }
 
+@media (min-width: 768px) {
+  .blog-singl-img .date li:nth-child(1) {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+@media (min-width: 992px) {
+  .blog-singl-img .date li:nth-child(1) {
+    font-size: 28px;
+    line-height: 32px;
+  }
+}
+
 .blog-singl-img .date li:nth-child(2) {
   color: #ffffff;
   font-style: italic;
   font-size: 14px;
   line-height: 18px;
   font-family: "Roboto", sans-serif;
+}
+
+@media (min-width: 768px) {
+  .blog-singl-img .date li:nth-child(2) {
+    font-size: 12px;
+    line-height: 14px;
+  }
+}
+
+@media (min-width: 992px) {
+  .blog-singl-img .date li:nth-child(2) {
+    font-size: 14px;
+    line-height: 18px;
+  }
 }
 
 .blog-singl-wrp .blog-singl-cont h6 {
@@ -1596,6 +1679,22 @@ footer {
   margin-top: 20px;
 }
 
+@media (min-width: 768px) {
+  .ftr-cnt .ftr-desc {
+    font-size: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+}
+
+@media (min-width: 992px) {
+  .ftr-cnt .ftr-desc {
+    font-size: 12px;
+    margin-bottom: 40px;
+    margin-top: 20px;
+  }
+}
+
 .ftr-cnt .lk-count {
   color: #333333;
   font-size: 14px;
@@ -1612,10 +1711,56 @@ footer {
   margin-bottom: 12px;
 }
 
-.ftr-cnt .ftr-scl-link li {
-  color: #95e1d3;
+@media (min-width: 768px) {
+  .ftr-cnt .divider {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+}
+
+@media (min-width: 992px) {
+  .ftr-cnt .divider {
+    margin-top: 12px;
+    margin-bottom: 12px;
+  }
+}
+
+.ftr-cnt .ftr-scl-link li a {
   font-size: 18px;
+  line-height: 18px;
   margin-left: 12px;
+  text-decoration: none;
+  color: #95e1d3;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+@media (min-width: 768px) {
+  .ftr-cnt .ftr-scl-link li a {
+    font-size: 12px;
+    line-height: 12px;
+    margin-left: 5px;
+  }
+}
+
+@media (min-width: 992px) {
+  .ftr-cnt .ftr-scl-link li a {
+    font-size: 14px;
+    line-height: 14px;
+    margin-left: 8px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .ftr-cnt .ftr-scl-link li a {
+    font-size: 18px;
+    line-height: 18px;
+    margin-left: 12px;
+  }
+}
+
+.ftr-cnt .ftr-scl-link li a:hover {
+  color: #31ac96;
 }
 
 .ftr-cnt .ftr-scl-link li:first-child {
@@ -1624,6 +1769,14 @@ footer {
   font-size: 16px;
   font-style: italic;
   color: #999999;
+}
+
+@media (min-width: 768px) {
+  .ftr-cnt .ftr-scl-link li:first-child {
+    font-size: 10px;
+    line-height: 10px;
+    margin-right: 5px;
+  }
 }
 
 ::-webkit-input-placeholder {
@@ -1644,6 +1797,21 @@ footer {
 
 .ftr-cnt .ftr-form {
   margin-top: 30px;
+  width: 100%;
+  height: 43px;
+  overflow: hidden;
+}
+
+@media (min-width: 768px) {
+  .ftr-cnt .ftr-form {
+    height: 30px;
+  }
+}
+
+@media (min-width: 992px) {
+  .ftr-cnt .ftr-form {
+    height: 43px;
+  }
 }
 
 .ftr-cnt .ftr-form input[type="email"] {
@@ -1653,7 +1821,20 @@ footer {
   color: #999999 !important;
   font-style: italic;
   font-size: 14px;
-  width: 230px;
+  width: 70%;
+  height: 100%;
+}
+
+@media (min-width: 768px) {
+  .ftr-cnt .ftr-form input[type="email"] {
+    font-size: 11px;
+  }
+}
+
+@media (min-width: 992px) {
+  .ftr-cnt .ftr-form input[type="email"] {
+    font-size: 14px;
+  }
 }
 
 .ftr-cnt .ftr-form input:focus {
@@ -1669,7 +1850,24 @@ footer {
   font-weight: bold;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
-  width: 150px;
+  width: 30%;
+  height: 100%;
+}
+
+@media (min-width: 768px) {
+  .ftr-cnt .ftr-form input[type="submit"] {
+    font-size: 10px;
+    line-height: 8px;
+    font-weight: normal;
+  }
+}
+
+@media (min-width: 992px) {
+  .ftr-cnt .ftr-form input[type="submit"] {
+    font-size: 12px;
+    line-height: 12px;
+    font-weight: 600;
+  }
 }
 
 .ftr-cnt .ftr-form input[type="submit"]:hover {
@@ -1702,11 +1900,35 @@ footer {
   text-transform: uppercase;
 }
 
+@media (min-width: 768px) {
+  .ftr-blog-singl .ftr-blog-cnt h6 {
+    font-size: 8px;
+  }
+}
+
+@media (min-width: 992px) {
+  .ftr-blog-singl .ftr-blog-cnt h6 {
+    font-size: 11px;
+  }
+}
+
 .ftr-blog-singl .ftr-blog-cnt p {
   color: #999999 !important;
-  font-size: 14px;
+  font-size: 12px;
   font-style: italic;
   margin-top: 6px;
+}
+
+@media (min-width: 768px) {
+  .ftr-blog-singl .ftr-blog-cnt p {
+    font-size: 10px;
+  }
+}
+
+@media (min-width: 992px) {
+  .ftr-blog-singl .ftr-blog-cnt p {
+    font-size: 12px;
+  }
 }
 
 .ftr-insta-title h6 {
@@ -1735,6 +1957,20 @@ footer {
   text-decoration: none;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+}
+
+@media (min-width: 768px) {
+  .ftr-insta .insta-link {
+    font-size: 10px;
+    margin-top: 15px;
+  }
+}
+
+@media (min-width: 992px) {
+  .ftr-insta .insta-link {
+    font-size: 14px;
+    margin-top: 35px;
+  }
 }
 
 .ftr-insta .insta-link:hover {
