--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,7 @@
 @import "sass-modules/mixins";
 @import "sass-modules/vars";
-@import "sass-modules/general";
+@import "sass-modules/preloader";
+@import "sass-modules/common";
 @import "sass-modules/navigation";
 
 // Banner section customize
